--- a/sobre.html
+++ b/sobre.html
@@ -7,6 +7,10 @@
     <title>Sobre</title>
 </head>
 <body>
-    <h1>Teste</h1>
+    <h1>Sobre o Autor</h1>
+    <br>
+    <img src="/css/eu.jpg" width="50" height="50">
+    <br>
+    <h2>teste</h2>
 </body>
 </html>
